--- a/Les_transparent/python3.tex
+++ b/Les_transparent/python3.tex
@@ -2,10 +2,10 @@
 
 \documentclass{transp_java}
 \usepackage{etex}
-\title[UE 1.1 : Introduction \`{a} la programmation]{CM4. Tableaux et algorithmes de tris}
+\title[UE 1.1 : Intro \`{a} la programmation]{CM4. Tableaux et algorithmes de tris}
 \author{A. Malek TOUMI\\ toumiab@ensta-bretagne.fr}
 %\date[05/04/2015]{Toumi A. Malek.  Python 3.4}
-\date{2018/2019}
+\date{2019/2020}
 \institute{ENSTA Bretagne}
 
 
