--- a/Les_transparent/python06_fichier.tex
+++ b/Les_transparent/python06_fichier.tex
@@ -2,10 +2,10 @@
 
 \documentclass{transp_java}
 \usepackage{etex}
-\title[UE 1.1 : Introduction \`{a} la programmation - Python 3]{CM4. Fichiers et exception}
+\title[UE 1.1 : Introduction \`{a} la programmation - Python 3]{CM5. Fichiers et exception}
 \author{A. Malek TOUMI\\ toumiab@ensta-bretagne.fr}
 %\date[05/04/2015]{Toumi A. Malek.  Python 3.4}
-\date{2018/2019}
+\date{2019//2020}
 \institute{ENSTA Bretagne}
 
 
