--- a/Les_transparent/python05.tex
+++ b/Les_transparent/python05.tex
@@ -2,10 +2,10 @@
 
 \documentclass{transp_java}
 \usepackage{etex}
-\title[UE 1.1 : Introduction \`{a} la programmation - Python 3]{CM5. R\'ecursivit\'e}
+\title[UE 1.1 : Intro. \`{a} la programmation - Python 3]{CM6. R\'ecursivit\'e}
 \author{A. Malek TOUMI\\ toumiab@ensta-bretagne.fr}
 %\date[05/04/2015]{Toumi A. Malek.  Python 3.4}
-\date{2018/2019}
+\date{2019/2020}
 \institute{ENSTA Bretagne}
 
 
