--- a/Les_transparent/python08_objet.tex
+++ b/Les_transparent/python08_objet.tex
@@ -4,8 +4,8 @@
 \usepackage{etex}
 \title[Langage et algorithmique]{UV2.1. Langage et algorithmique  \\ \textcolor[rgb]{0.5,0,0.5}{- CR1. Programmation Orientée Objet (POO)}}
 \author{A. Malek TOUMI\\ toumiab@ensta-bretagne.fr}
-%\date[05/04/2015]{Toumi A. Malek.  Python 3.4}
-\date{2018/2019}
+%\date[05/04/2015]{Toumi A. Malek.  Python 3.X}
+\date{2019/2020}
 \institute{ENSTA Bretagne}
 
 
@@ -49,7 +49,7 @@
 \newcommand{\twound}{\rule{2\dunder}{0.4pt}}
 
 \input{objet}
-\input{horloge}
+%\input{horloge}
 
 \end{document}
 
